--- a/src/main/resources/ui/handbook/questNote.yml
+++ b/src/main/resources/ui/handbook/questNote.yml
@@ -8,7 +8,7 @@ already:
   part:
     - id: desc
       note:
-        - "任务状态： {3}"
+        - "任务状态： {1}"
         - ""
         - "#quest-desc-note"
         - ""
@@ -18,18 +18,17 @@ already:
     - id: quest
       note:
         - "@quit;"
-      condition: |
-        {6}
+      condition: ""
   addon:
     - id: target
       text:
         - "&7&l[ &3&l查看当前任务目标 &7&l]"
       hover:
         - "&7&l[ &a&l点击 &7&l]"
-      command: "/qen handbook target {2}"
+      command: "/qen eval handbook target {{questID}}"
     - id: quit
       text:
         - "&7&l[ &c&l点击放弃任务 &7&l]"
       hover:
         - "&7&l[ &a&l点击 &7&l]"
-      command: "/qen quest quit {player} uuid {2}"
+      command: "/qen quest quit {{player}} {{questID}}"
