--- a/src/main/resources/space/quest/crop1.yml
+++ b/src/main/resources/space/quest/crop1.yml
@@ -83,5 +83,5 @@ quest:
           - id: desc
             note:
               - "&8挖掘石块或打破箱子 &a3 &8个"
-              - "   &8进度 &6{{schedule}}"
-              - "   &8剩余时间 &c{{limit time}}"
+              - "   &8进度 &6{schedule}"
+              - "   &8剩余时间 &c{limit time}"
