2 - 2022/6/15 - 任务手册调整

--- a/src/main/resources/ui/handbook/questNote.yml
+++ b/src/main/resources/ui/handbook/questNote.yml
@@ -10,6 +10,7 @@ already:
       note:
         - "任务状态： {1}"
         - ""
+        - "#group-desc-note"
         - "#quest-desc-note"
         - ""
     - id: target
