--- a/src/main/resources/ui/handbook/questNote.yml
+++ b/src/main/resources/ui/handbook/questNote.yml
@@ -3,12 +3,12 @@
 already:
   # 首页顶部内容物
   head:
-    - "&7&l[ &8&l{0} &7&l]"
+    - "&7&l[ &8&l%qen_quest select {{questID}} quest name% &7&l]"
     - ""
   part:
     - id: desc
       note:
-        - "任务状态： {1}"
+        - "任务状态： %qen_quest select {{questID}} quest state%"
         - ""
         - "#group-desc-note"
         - "#quest-desc-note"
