--- a/src/main/resources/ui/handbook/sortViewQuest.yml
+++ b/src/main/resources/ui/handbook/sortViewQuest.yml
@@ -23,4 +23,4 @@ for:
         - "&7&l[ &6&l点击阅览 &7&l]"
       hover:
         - "&7&l[ &a&l点击 &7&l]"
-      command: "/qen eval handbook info {{questID}}"
+      command: "/qen handbook info {{questID}}"
