- 优化目标node匹配，格式{{<key>[[value_1]][[value_2]]}} - 修改目标物品匹配格式为参数容器

--- a/src/main/resources/space/quest/crop1.yml
+++ b/src/main/resources/space/quest/crop1.yml
@@ -70,10 +70,10 @@ quest:
       id: a
       event: break block
       node: |
-        {{block
-        stone
-        chest}}
-        {{amount 3}}
+        {{<block>
+        [[stone]]
+        [[chest]]}}
+        {{<amount>[[3]]}}
       ui:
         part:
           - id: desc
