--- a/src/main/resources/space/quest/crop1.yml
+++ b/src/main/resources/space/quest/crop1.yml
@@ -71,9 +71,9 @@ quest:
       event: break block
       node: |
         {{<block>
-        [[stone]]
-        [[chest]]}}
-        {{<amount>[[3]]}}
+        [stone]
+        [chest]}}
+        {{<amount>[3]}}
       ui:
         part:
           - id: desc
