- 修复聊天框对话解析 - 修复空间对话 - 修复对话效果

--- a/src/main/resources/ui/handbook/questNote.yml
+++ b/src/main/resources/ui/handbook/questNote.yml
@@ -8,7 +8,7 @@ already:
   part:
     - id: desc
       note:
-        - "任务状态： %qen_quest select {{questID}} quest state%"
+        - "任务状态： %qen_quest select {{questID}} quest state lang%"
         - ""
         - "#group-desc-note"
         - "#quest-desc-note"
