--- a/src/main/resources/space/dialog/chat.yml
+++ b/src/main/resources/space/dialog/chat.yml
@@ -16,6 +16,10 @@ chatDialog1:
     condition: |
       spaceRange 30 30 30 {{location}}
       permission *dialog.prm.1
+  # 约束
+  flags:
+    - LOOK_NPC
+    - STOP_MOVE
   # 可选对话类型
   type: chat
   # 关于对话 如下是全息对话示例
