--- a/src/main/resources/space/dialog/chat.yml
+++ b/src/main/resources/space/dialog/chat.yml
@@ -16,16 +16,16 @@ chatDialog1:
     condition: |
       spaceRange 30 30 30 {{location}}
       permission *dialog.prm.1
-  # 约束
-  flags:
-    - LOOK_NPC
-    - STOP_MOVE
   # 可选对话类型
   type: chat
+  # dialog模板
+  template: chat_common_animation
   # 关于对话 如下是全息对话示例
   dialog:
-    - "{{[[static]][[静态文字占位]]}}{{[[animation]][[&a测试对话]]}}"
-    - "{{[[animation]][[Hello]]}}"
+    - "你好，"
+    - "我想拜托你一件事"
+  replyChoose: "&7&l[ &b&l! &7&l] &b"
+  replyDefault: "&7"
   # 关于回复
   reply:
     -
