fix🐛:  修复物品检测语句

--- a/.gitignore
+++ b/.gitignore
@@ -1685,3 +1685,23 @@ build/libs/QuestEngine-3.1.2-sources.jar
 build/libs/QuestEngine-3.1.2.jar
 build/libs/QuestEngine-3.1.3-sources.jar
 build/libs/QuestEngine-3.1.3.jar
+.idea/libraries/Gradle__io_izzel_taboolib_common_5_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_common_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_chat_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_configuration_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_database_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_effect_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_kether_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_lang_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_metrics_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_navigation_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_nms_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_nms_util_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_module_ui_6_0_10_76.xml
+.idea/libraries/Gradle__io_izzel_taboolib_platform_bukkit_6_0_10_76.xml
+build/kotlin/QuestEngine313langjar-classes.txt
+build/kotlin/QuestEngine314jar-classes.txt
+build/libs/QuestEngine-3.1.3-lang-sources.jar
+build/libs/QuestEngine-3.1.3-lang.jar
+build/libs/QuestEngine-3.1.4-sources.jar
+build/libs/QuestEngine-3.1.4.jar
