feat✨:  优化聊天对话

--- a/src/main/resources/space/dialog/chat.yml
+++ b/src/main/resources/space/dialog/chat.yml
@@ -49,3 +49,8 @@ chatDialog1:
       # 支持 Kether 语句
       script: |
         dialog end
+  flag:
+    - KEEP_CONTENT
+    - BLINDNESS
+    - SLOW
+    - KEEP_VIEW
